webpack bundle application

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,11 +22,7 @@
             <nav-pane></nav-pane>
         </div>
     </div>
-    <script src="/angular.min.js"></script>
-    <script src="/simpleApp.js"></script>
-    <script src="/nav-pane/nav-pane.js"></script>
-    <script src="/panel-1/panel-1.js"></script>
-    <script src="/panel-2/panel-2.js"></script>
+    <script src="/bundle.js"></script>
 </body>
 
 </html>
